<resources>
    <string name="app_name">미세먼지 알리미</string>
    <string name="prompt_username">아이디</string>
    <string name="prompt_password">비밀번호</string>
    <string name="prompt_confirm_password">비밀번호 확인</string>
    <string name="prompt_email">이메일</string>
    <string name="prompt_last_name">성</string>
    <string name="prompt_first_name">이름</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_in">로그인</string>
    <string name="registration">회원가입</string>
    <string name="fine_dust_good">좋은 공기</string>
    <string name="fine_dust_moderate">보통 공기</string>
    <string name="fine_dust_unhealthy">나쁜 공기</string>
    <string name="fine_dust_very_unhealthy">매우 나쁜 공기</string>
    <string name="prompt_morning">아침</string>
    <string name="prompt_afternoon">점심</string>
    <string name="prompt_evening">저녁</string>

</resources>