<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ysshin.fine_dust_app.viewmodels.HomeViewModel" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:bind_background_image="@{viewModel.fineDustState}"
            tools:context=".ui.HomeFragment">

            <TextView
                android:id="@+id/dataTimeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{viewModel.dataTime}"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/addressTextView"
                app:layout_constraintStart_toStartOf="@id/mainDustImageView" />

            <TextView
                android:id="@+id/addressTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{viewModel.addressLine}"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@id/mainDustImageView"
                app:layout_constraintStart_toStartOf="@id/mainDustImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/mainDustImageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/fine_dust_good"
                app:bind_image="@{viewModel.fineDustState}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintWidth_percent="0.5" />

            <TextView
                android:id="@+id/fineDustTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:bind_text="@{viewModel.fineDustState}"
                app:layout_constraintStart_toStartOf="@id/mainDustImageView"
                app:layout_constraintTop_toBottomOf="@+id/mainDustImageView" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/skyCardView"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toTopOf="@id/temperatureCardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.9">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/morningSkyImageView"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        app:bind_sky_image="@{viewModel.morningSkyState}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/afternoonSkyImageView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/morningSkyTextView"
                        app:layout_constraintWidth_percent="0.33" />

                    <TextView
                        android:id="@+id/morningSkyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/prompt_morning"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toTopOf="@id/morningSkyImageView"
                        app:layout_constraintEnd_toEndOf="@id/morningSkyImageView"
                        app:layout_constraintStart_toStartOf="@id/morningSkyImageView"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/afternoonSkyImageView"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        app:bind_sky_image="@{viewModel.afternoonSkyState}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/eveningSkyImageView"
                        app:layout_constraintStart_toEndOf="@id/morningSkyImageView"
                        app:layout_constraintTop_toBottomOf="@id/afternoonSkyTextView"
                        app:layout_constraintWidth_percent="0.33" />

                    <TextView
                        android:id="@+id/afternoonSkyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/prompt_afternoon"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toTopOf="@id/afternoonSkyImageView"
                        app:layout_constraintEnd_toEndOf="@id/afternoonSkyImageView"
                        app:layout_constraintStart_toStartOf="@id/afternoonSkyImageView"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/eveningSkyImageView"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        app:bind_sky_image="@{viewModel.eveningSkyState}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/afternoonSkyImageView"
                        app:layout_constraintTop_toBottomOf="@id/eveningSkyTextView"
                        app:layout_constraintWidth_percent="0.33" />

                    <TextView
                        android:id="@+id/eveningSkyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/prompt_evening"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toTopOf="@id/eveningSkyImageView"
                        app:layout_constraintEnd_toEndOf="@id/eveningSkyImageView"
                        app:layout_constraintStart_toStartOf="@id/eveningSkyImageView"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/temperatureCardView"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toTopOf="@id/dustCardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.9">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/minTemperatureImageView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/cold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/minTemperatureTextView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.3" />

                    <TextView
                        android:id="@+id/minTemperatureTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:bind_cold_text="@{viewModel.minTemperature}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/maxTemperatureImageView"
                        app:layout_constraintStart_toEndOf="@id/minTemperatureImageView"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.2" />

                    <ImageView
                        android:id="@+id/maxTemperatureImageView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/hot"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/maxTemperatureTextView"
                        app:layout_constraintStart_toEndOf="@id/minTemperatureTextView"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.3" />

                    <TextView
                        android:id="@+id/maxTemperatureTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:bind_hot_text="@{viewModel.maxTemperature}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/maxTemperatureImageView"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.2" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/dustCardView"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.9">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/bottomDustImageView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        app:bind_bottom_fine_dust_image="@{viewModel.fineDustState}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/bottomDustTextView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.3" />

                    <TextView
                        android:id="@+id/bottomDustTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        app:bind_bottom_fine_dust_text="@{viewModel.fineDustValue}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/bottomUltraFineDustImageView"
                        app:layout_constraintStart_toEndOf="@id/bottomDustImageView"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.2" />

                    <ImageView
                        android:id="@+id/bottomUltraFineDustImageView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        app:bind_bottom_ultra_fine_dust_image="@{viewModel.ultraFineDustState}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/bottomUltraDustTextView"
                        app:layout_constraintStart_toEndOf="@id/bottomDustTextView"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.3" />

                    <TextView
                        android:id="@+id/bottomUltraDustTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        app:bind_bottom_ultra_fine_dust_text="@{viewModel.ultraFineDustValue}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/bottomUltraFineDustImageView"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.2" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <ProgressBar
                android:id="@+id/loading"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                app:bind_visibility="@{viewModel.loading}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>